# qt-flutter-embedder

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build_engine.sh  build_example.dart  build_example.sh  code.code-workspace  code.code-workspace.template  download_engine.sh  generate-engine-compile_commands.sh  main.cpp  run_example.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: compose.yml
.github/workflows/: build.yml
docker/: Dockerfile
engine_binaries/: README.md
examples/default_counter_app/: README.md  pubspec.yaml
examples/default_counter_app/lib/: main.dart
examples/default_counter_app/linux/: CMakeLists.txt  my_application.cc
examples/default_counter_app/linux/flutter/: generated_plugins.cmake
examples/default_counter_app/macos/Runner.xcodeproj/: project.pbxproj
examples/default_counter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/default_counter_app/macos/Runner/Configs/: AppInfo.xcconfig
examples/default_counter_app/windows/: CMakeLists.txt
examples/default_counter_app/windows/flutter/: CMakeLists.txt  generated_plugins.cmake
examples/default_counter_app/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
src/: Embedder.cpp  Embedder.h  FlutterWindow.cpp  FlutterWindow.h
